# WhatsApp_Scheduler_Pro

./: CMakeLists.txt  README.md  cmakeStructure.md  image_reader.c  image_reader.h
include/: image_reader.h
src/: image_reader.c
src/check_time/: CMakeLists.txt  check_time.c
src/menu/: CMakeLists.txt  menu.c
src/validate_contact/: CMakeLists.txt  validate_contact.c
